clarified that Raise() and Lower() only work for wxTopLevelWindows (closes #4717)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@56982 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775